--- a/quickaiweb/Site1.Master
+++ b/quickaiweb/Site1.Master
@@ -14,6 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="login.css" rel="stylesheet" />
+    <link href="loginmediaquery.css" rel="stylesheet" />
     <link href="fontawesome/css/all.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -23,14 +24,14 @@
 <nav>
     <img src="images/hype.png" /usemap="#workmap">  
 <map name="workmap">
-  <area shape="rect" coords="34,44,270,350" href="hypt.html" onclick="myFunction()">
+  <area shape="rect" coords="34,44,270,350" href="http://localhost:49935/homepage.aspx" onclick="myFunction()">
 </map>
+<button type="button" class="btn btn-primary" id="btn1" style="margin-top: 10px;"><a href="http://localhost:49935/loginpage.aspx"> Join Now</a>  </button> 
 <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav">
       <li class="dropdown">
         <a class="dropdown-toggle" data-toggle="dropdown" href="#">English<span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#"></a></li>
           <li class="disabled"><a href="#">Arabic</a></li>
           <li class="disabled"><a href="#">French</a></li>
           <li class="disabled"><a href="#">Spanish</a></li>
@@ -39,13 +40,9 @@
           <li><a href="#">English</a></li>
         </ul>
       </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="http://localhost:49935/signup.aspx"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="http://localhost:49935/loginpage.aspx"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-      <button type="button" class="btn btn-primary" id="btn1" style="margin-top: 10px;">Join Now</button>  
+    </ul>  
     </nav>
+      
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
@@ -78,29 +75,19 @@
         <div class="foot4">
        <span>2023 Socius IGB Pvt Ltd,&copy; All right reserved.</span>
       <div class="icons" id="foot5">
-		<a href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
-		<a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
-		<a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-		<a href="https://in.linkedin.com/"><i class="fa-brands fa-linkedin-in"></i></a>
-		<a href="https://in.pinterest.com/"><i class="fa-brands fa-pinterest"></i></a>
-		<a href="https://www.youtube.com/"><i class="fab fa-youtube"></i></a>
-	</div>
-            
+		<a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+		<a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+		<a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a>
+		<a href="https://in.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+		<a href="https://in.pinterest.com/" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
+		<a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+	</div>       
     </footer>
-
+</form>
     <script>
-        function display(){
-            alert('successfully logged in!')    
-        }
         function myFunction() {
-          alert("You clicked on Hype webpage!");
+            alert("You clicked on Hype webpage!");
         }
-        function myfunction1(){
-            alert('Rest Password?')
-        }
-        
     </script>
-
-    </form>
 </body>
 </html>
