--- a/quickaiweb/homepage.css
+++ b/quickaiweb/homepage.css
@@ -81,3 +81,123 @@
     font-weight: bolder;
     color: white;
 }
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400;700&display=swap");
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffcc99;
+    font-family: "Titillium Web", sans-serif;
+}
+
+.testimonials {
+    background: #fff;
+    text-align: center;
+    width: 95%;
+    max-width: 600px;
+    padding: 2rem;
+    margin: 1.5rem auto;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
+}
+
+.title {
+    font-size: 1.5rem;
+}
+
+.description {
+    font-size: 0.95rem;
+    color: #333;
+}
+
+.slider-container {
+    margin-top: 2rem;
+    margin: 2rem auto 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.slider {
+    display: flex;
+    flex: 0 0 1;
+    width: 300%; /* Depends On slide-box Length * 100 */
+    transition: all 0.5s linear;
+}
+
+.slide-box {
+    padding: 0 80px;
+}
+
+    .slide-box .comment {
+        background-color: #000;
+        color: #fff;
+        font-size: 0.86rem;
+        padding: 1rem 1.5rem;
+        margin-bottom: 2rem;
+        letter-spacing: 0.4px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+        position: relative;
+        font-weight: 400;
+    }
+
+        .slide-box .comment::before {
+            content: "";
+            position: absolute;
+            left: 50%;
+            bottom: -10px;
+            height: 20px;
+            width: 20px;
+            background-color: #000;
+            transform: translateX(-50%) rotate(45deg);
+            box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+        }
+
+    .slide-box img {
+        max-width: 60px;
+        border-radius: 50%;
+    }
+
+    .slide-box .name {
+        font-size: 1rem;
+    }
+
+    .slide-box .job {
+        font-size: 0.7rem;
+        color: #8d8e97;
+        font-weight: 400;
+    }
+
+.control-slider {
+    position: absolute;
+    z-index: 5;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 40px;
+    width: 40px;
+    background-color: #fff;
+    line-height: 40px;
+    color: #333;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+}
+
+.btn-left {
+    left: 10px;
+}
+
+.btn-right {
+    right: 10px;
+}
+
+@media screen and (max-width: 500px) {
+    .slide-box {
+        padding: 0 55px;
+    }
+}
