--- a/quickaiweb/login.css
+++ b/quickaiweb/login.css
@@ -4,7 +4,7 @@
     padding: 10px 2%;
     justify-content: space-between;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    background: #fff;
+    background: var(--primary-color);
     position: sticky;
     top: 0;
     z-index: 10;
@@ -57,6 +57,7 @@ footer {
     background-color: rgba(24, 70, 152,1);
     display: flex;
     margin-left: 1000px;
+   
 }
 #btn1 a{
     text-decoration:none;
@@ -64,7 +65,7 @@ footer {
 }
 
 #btn2 {
-    color: #fff;
+    color: var(--primary-color);
 }
 @media (max-width: 767px) {
     nav {
@@ -140,6 +141,63 @@ footer {
     #foot5 {
         padding-left: 0;
         text-indent: 0;
+    }
+}
+
+:root {
+    /* --primary-color:#fff;
+    --secondary-color:#212121;*/
+
+    --primary-color: #fff;
+    --secondary-color: #212121;
+}
+
+.dark-theme {
+    --primary-color: #181818;
+    --secondary-color: #fff;
+}
+
+body {
+    background: var(--primary-color);
+}
+
+@media (max-width: 375px) {
+    .nav {
+        display: block;
+        padding: 10px;
+        position: sticky;
+        top: 0;
+        z-index: 10;
+        background: #fff;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .navbar-nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+        .navbar-nav li {
+            display: none;
+        }
+
+    .dropdown {
+        display: block;
+    }
+
+    .login1 {
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 50px;
+    }
+
+    .input-group {
+        width: 100%;
+    }
+
+    #btn {
+        width: 100%;
     }
 }
 
